// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > tests/fixtures/basic.vue > isProduction = false 1`] = `
"// basic.js
import { createElementVNode, openBlock, createElementBlock } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

console.log('Hello world');

const _sfc_main = {};

const _hoisted_1 = /*#__PURE__*/createElementVNode("h1", null, "Hello World", -1 /* HOISTED */);
const _hoisted_2 = [
  _hoisted_1
];

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock("div", null, [..._hoisted_2]))
}
var basic = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render],['__file','#FILE#']]);

export { basic as default };
"
`;

exports[`rollup > tests/fixtures/basic.vue > isProduction = true 1`] = `
"// basic.js
import { createElementVNode, openBlock, createElementBlock } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

console.log('Hello world');

const _sfc_main = {};

const _hoisted_1 = /*#__PURE__*/createElementVNode("h1", null, "Hello World", -1 /* HOISTED */);
const _hoisted_2 = [
  _hoisted_1
];

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock("div", null, _hoisted_2))
}
var basic = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render]]);

export { basic as default };
"
`;

exports[`rollup > tests/fixtures/reactivity-transform.ts > isProduction = false 1`] = `
"// reactivity-transform.js
import { ref } from 'vue';

const ref1 = $ref("hello");
const ref2 = $(ref("hello"));
console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));
"
`;

exports[`rollup > tests/fixtures/reactivity-transform.ts > isProduction = true 1`] = `
"// reactivity-transform.js
import { ref } from 'vue';

const ref1 = $ref("hello");
const ref2 = $(ref("hello"));
console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));
"
`;

exports[`rollup > tests/fixtures/reactivity-transform.vue > isProduction = false 1`] = `
"// reactivity-transform.js
import { ref } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

const _sfc_main = {
  __name: 'reactivity-transform',
  setup(__props, { expose: __expose }) {
  __expose();

const ref1 = $ref('hello');
const ref2 = $(ref('hello'));

console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));

const __returned__ = { ref1, ref2, ref };
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true });
return __returned__
}

};
var reactivityTransform = /*#__PURE__*/_export_sfc(_sfc_main, [['__file','#FILE#']]);

export { reactivityTransform as default };
"
`;

exports[`rollup > tests/fixtures/reactivity-transform.vue > isProduction = true 1`] = `
"// reactivity-transform.js
import { ref } from 'vue';

const _sfc_main = {
  __name: 'reactivity-transform',
  setup(__props) {

const ref1 = $ref('hello');
const ref2 = $(ref('hello'));

console.log(ref1);
console.log(ref2);
console.log($$(ref1));
console.log($$(ref2));

return () => {}
}

};

export { _sfc_main as default };
"
`;

exports[`rollup > tests/fixtures/script-setup.vue > isProduction = false 1`] = `
"// script-setup.js
import { createElementVNode, openBlock, createElementBlock } from 'vue';

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

const foo = 'bar';

const _sfc_main = {
  __name: 'script-setup',
  setup(__props, { expose: __expose }) {
  __expose();


const __returned__ = { foo };
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true });
return __returned__
}

};

const _hoisted_1 = /*#__PURE__*/createElementVNode("h1", null, "Hello World", -1 /* HOISTED */);
const _hoisted_2 = [
  _hoisted_1
];

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return (openBlock(), createElementBlock("div", null, [..._hoisted_2]))
}
var scriptSetup = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render],['__file','#FILE#']]);

export { scriptSetup as default };
"
`;

exports[`rollup > tests/fixtures/script-setup.vue > isProduction = true 1`] = `
"// script-setup.js
import { createElementVNode, openBlock, createElementBlock } from 'vue';

const _hoisted_1 = /*#__PURE__*/createElementVNode("h1", null, "Hello World", -1 /* HOISTED */);
const _hoisted_2 = [
  _hoisted_1
];

const foo = 'bar';

const _sfc_main = {
  __name: 'script-setup',
  setup(__props) {


return (_ctx, _cache) => {
  return (openBlock(), createElementBlock("div", null, _hoisted_2))
}
}

};

export { _sfc_main as default };
"
`;

exports[`rollup > tests/fixtures/script-setup-ts.vue > isProduction = false 1`] = `
"// script-setup-ts.js
import { defineComponent, createElementVNode, openBlock, createElementBlock } from 'vue';

const str = "bar";
var script_setup_ts_vue_vue_type_script_setup_true_lang_default = /* @__PURE__ */ defineComponent({
  __name: "script-setup-ts",
  props: {
    foo: { type: String, required: true },
    bar: { type: Number, required: true },
    baz: { type: Boolean, required: true }
  },
  setup(__props, { expose: __expose }) {
    const {
      foo = "123",
      bar = 123,
      baz = true
    } = __props;
    __expose({
      str
    });
    const __returned__ = { str };
    Object.defineProperty(__returned__, "__isScriptSetup", { enumerable: false, value: true });
    return __returned__;
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

const _hoisted_1 = /* @__PURE__ */ createElementVNode(
  "h1",
  null,
  "Hello World",
  -1
  /* HOISTED */
);
const _hoisted_2 = [
  _hoisted_1
];
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("div", null, [..._hoisted_2]);
}
var scriptSetupTs = /* @__PURE__ */ _export_sfc(script_setup_ts_vue_vue_type_script_setup_true_lang_default, [["render", _sfc_render], ["__file", '#FILE#']]);

export { scriptSetupTs as default };
"
`;

exports[`rollup > tests/fixtures/script-setup-ts.vue > isProduction = true 1`] = `
"// script-setup-ts.js
import { createElementVNode, defineComponent, openBlock, createElementBlock } from 'vue';

const _hoisted_1 = /* @__PURE__ */ createElementVNode(
  "h1",
  null,
  "Hello World",
  -1
  /* HOISTED */
);
const _hoisted_2 = [
  _hoisted_1
];
const str = "bar";
var script_setup_ts_vue_vue_type_script_setup_true_lang_default = /* @__PURE__ */ defineComponent({
  __name: "script-setup-ts",
  props: {
    foo: {},
    bar: {},
    baz: { type: Boolean }
  },
  setup(__props, { expose: __expose }) {
    const {
      foo = "123",
      bar = 123,
      baz = true
    } = __props;
    __expose({
      str
    });
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock("div", null, _hoisted_2);
    };
  }
});

export { script_setup_ts_vue_vue_type_script_setup_true_lang_default as default };
"
`;

exports[`rollup > tests/fixtures/sfc-src.vue > isProduction = false 1`] = `
"// sfc-src.js
import { defineComponent, createElementVNode, openBlock, createElementBlock, toDisplayString } from 'vue';

var src_script_ts_vue_type_script_src_true_lang_default = defineComponent({
  setup() {
    return [];
  }
});

const _hoisted_1 = /* @__PURE__ */ createElementVNode(
  "h1",
  null,
  "Hello World",
  -1
  /* HOISTED */
);
function render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("div", null, [
    _hoisted_1,
    createElementVNode(
      "h2",
      null,
      toDisplayString(_ctx.msg),
      1
      /* TEXT */
    )
  ]);
}

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var sfcSrc = /*#__PURE__*/_export_sfc(src_script_ts_vue_type_script_src_true_lang_default, [['render',render],['__file','#FILE#']]);

export { sfcSrc as default };
"
`;

exports[`rollup > tests/fixtures/sfc-src.vue > isProduction = true 1`] = `
"// sfc-src.js
import { defineComponent, createElementVNode, openBlock, createElementBlock, toDisplayString } from 'vue';

var src_script_ts_vue_type_script_src_true_lang_default = defineComponent({
  setup() {
    return [];
  }
});

const _hoisted_1 = /* @__PURE__ */ createElementVNode(
  "h1",
  null,
  "Hello World",
  -1
  /* HOISTED */
);
function render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("div", null, [
    _hoisted_1,
    createElementVNode(
      "h2",
      null,
      toDisplayString(_ctx.msg),
      1
      /* TEXT */
    )
  ]);
}

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var sfcSrc = /*#__PURE__*/_export_sfc(src_script_ts_vue_type_script_src_true_lang_default, [['render',render]]);

export { sfcSrc as default };
"
`;

exports[`rollup > tests/fixtures/src-script.ts > isProduction = false 1`] = `
"// src-script.js
import { defineComponent } from 'vue';

var src_script_default = defineComponent({
  setup() {
    return [];
  }
});

export { src_script_default as default };
"
`;

exports[`rollup > tests/fixtures/src-script.ts > isProduction = true 1`] = `
"// src-script.js
import { defineComponent } from 'vue';

var src_script_default = defineComponent({
  setup() {
    return [];
  }
});

export { src_script_default as default };
"
`;

exports[`rollup > tests/fixtures/typescript.vue > isProduction = false 1`] = `
"// typescript.js
const str = "123";
const bool = true;
const count = 123;
function foo(str2) {
}
var typescript_vue_vue_type_script_lang_default = {};

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var typescript = /* @__PURE__ */ _export_sfc(typescript_vue_vue_type_script_lang_default, [["__file", '#FILE#']]);

export { typescript as default };
"
`;

exports[`rollup > tests/fixtures/typescript.vue > isProduction = true 1`] = `
"// typescript.js
const str = "123";
const bool = true;
const count = 123;
function foo(str2) {
}
var typescript_vue_vue_type_script_lang_default = {};

export { typescript_vue_vue_type_script_lang_default as default };
"
`;
